ADD: Skeleton Pages for all the options in the Home Sreen

--- a/MAUI_ReferenceApp/View/HomePage.xaml
+++ b/MAUI_ReferenceApp/View/HomePage.xaml
@@ -29,7 +29,7 @@
         <CollectionView.ItemTemplate>
             <DataTemplate x:DataType="model:MdlListTile">
                 <VerticalStackLayout>
-                    <HorizontalStackLayout Margin="20,23"
+                    <HorizontalStackLayout Padding="20,23"
                                            Spacing="30">
                         <HorizontalStackLayout.GestureRecognizers>
                             <TapGestureRecognizer CommandParameter="{Binding Title}"
